# parsyll

./: CMakeLists.txt  COPYING  README.md  syllabledecoder_PLP.c
cfg/: PLP_filter.mat
example/: example_PLP.htk  example_PLP.mat
